<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#CC000000"
    tools:context="com.hearthappy.log.preview.PreviewLargeImageActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/image_preview_title"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/preview_image"
        android:scaleType="fitCenter" />

    <ProgressBar
        android:id="@+id/pbLoadingImage"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/llBottomNav"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnZoomOut"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/image_zoom_out_desc"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_zoom_out_24"
            android:tint="?attr/colorOnSurface" />

        <ImageButton
            android:id="@+id/btnZoomIn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/image_zoom_in_desc"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_zoom_in_24"
            android:tint="?attr/colorOnSurface" />

        <ImageButton
            android:id="@+id/btnRotate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/image_rotate_desc"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_rotate_right_24"
            android:tint="?attr/colorOnSurface" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnDownload"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/image_download_desc"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_download_24"
            android:tint="?attr/colorOnSurface" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/image_close_desc"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_close_24"
            android:tint="?attr/colorOnSurface" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
