<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFilter">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLogList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_log_list" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <FrameLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#66000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/swipeRefreshLayout"
        app:layout_constraintTop_toTopOf="@+id/swipeRefreshLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvQueryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/query_progress_title"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/pbLoading"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:max="100"
                tools:progress="45" />

            <TextView
                android:id="@+id/tvQueryProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/query_loading_stage"
                android:textColor="@android:color/black"
                tools:text="querying 45%" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchBackgroundContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/query_background_continue" />

            <Button
                android:id="@+id/btnCancelQuery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/query_cancel" />
        </LinearLayout>
    </FrameLayout>
    <ImageButton
        android:id="@+id/btnSimplify"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/simplify"
        android:src="@android:drawable/ic_menu_more"
        app:layout_constraintEnd_toStartOf="@+id/btnFilter"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageButton
        android:id="@+id/btnFilter"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/filter_title"
        android:src="@android:drawable/ic_menu_sort_by_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
