<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp_290"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/dp_16"
    android:layout_marginEnd="@dimen/dp_16"
    android:background="@drawable/bg_dialog_card"
    android:padding="@dimen/dp_16">

    <!-- 标题 -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_12"
        android:gravity="center"
        android:textColor="@color/text_primary"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 选项容器 -->
    <RadioGroup
        android:id="@+id/radioGroupOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_12"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <!-- 全部选项 -->
        <RadioButton
            android:id="@+id/rbOptionAll"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/dp_4"
            android:gravity="center"
            android:text="@string/select_all"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/color_base_black"
            android:paddingStart="@dimen/dp_4"
            android:paddingEnd="@dimen/dp_4" />

        <!-- 单个选项 -->
        <RadioButton
            android:id="@+id/rbOptionSingle"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/dp_4"
            android:gravity="center"
            android:textColor="@color/color_base_black"
            android:text="@string/select_single"
            android:textSize="@dimen/sp_14"
            android:paddingStart="@dimen/dp_4"
            android:paddingEnd="@dimen/dp_4" />

    </RadioGroup>

    <!-- 按钮容器 -->
    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_36"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@drawable/bg_btn_outline"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/filter_text_selected"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupOptions" />

    <TextView
        android:id="@+id/tvConfirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_36"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/bg_btn_filled"
        android:gravity="center"
        android:text="@string/filter_confirm"
        android:textColor="@color/color_base_white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
     />

    <!-- 垂直引导线，用于平分按钮区域 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
